--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.sbasite.activities" android:versionName="@string/app_version" android:versionCode="1">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.sbasite.sbasites" android:versionName="@string/app_version" android:versionCode="1">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+	<uses-permission android:name="android.permission.WRITE_OWNER_DATA"></uses-permission>
 	<application android:name=".SBASitesApplication" android:label="@string/app_name" android:icon="@drawable/cw" android:allowClearUserData="true" android:permission="android.permission.WRITE_OWNER_DATA" android:debuggable="true" android:enabled="true">
 		<uses-library android:name="com.google.android.maps" />
 		<activity android:label="@string/app_name" android:name="SBAMapActivity">
@@ -18,7 +20,4 @@
 		</activity>
 	
 </application>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-<uses-permission android:name="android.permission.WRITE_OWNER_DATA"></uses-permission>
-
 </manifest>
