--- a/default.properties
+++ b/default.properties
@@ -8,5 +8,7 @@
 # project structure.
 
 # Project target.
-target=Google Inc.:Google APIs:7
+target=Google Inc.:Google APIs:9
 sdk-folder=/Developer/android-sdk-mac_86
+android.library=true
+android.library.reference.1=../android-active-record
