--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="lib" path="/Users/rosschapman/Code/Android Projects/SBASites/lib/activeandroid.jar"/>
+	<classpathentry kind="lib" path="lib/activeandroid.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
