--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.sbasite.sbasites" android:versionName="@string/app_version" android:versionCode="2">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.sbasite.sbasites" android:versionName="@string/app_version" android:versionCode="1">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<application android:name=".SBASitesApplication" android:label="@string/app_name" android:icon="@drawable/cw">
@@ -11,6 +11,7 @@
 		</activity><activity android:label="@string/instructions" android:name="Instructions">
 		</activity><activity android:label="@string/layers" android:name="Layers">
 		</activity><activity android:label="@string/list_view" android:name="ListView">
+		</activity><activity android:label="@string/site_detail_activity" android:name="SiteDetailActivity">
 		</activity>
 		<activity android:label="@string/site_name_id" android:name="SearchSiteNameAddress">
 		</activity>
