--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,13 +8,18 @@
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-		</activity><activity android:label="@string/instructions" android:name="Instructions">
-		</activity><activity android:label="@string/layers" android:name="Layers">
-		</activity><activity android:label="@string/list_view" android:name="ListView">
-		</activity><activity android:label="@string/site_detail_activity" android:name="SiteDetailActivity">
+		</activity>
+		<activity android:label="@string/instructions" android:name="Instructions">
+		</activity>
+		<activity android:label="@string/layers" android:name="Layers">
+		</activity>
+		<activity android:label="@string/list_view" android:name="ListView">
+		</activity>
+		<activity android:label="@string/site_detail_activity" android:name="SiteDetailActivity">
 		</activity>
 		<activity android:label="@string/site_name_id" android:name="SearchSiteNameAddress">
 		</activity>
-	
-</application>
+		<activity android:label="@string/coordinates" android:name="SearchCoordinates">
+		</activity>
+	</application>
 </manifest>
