--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,5 +21,7 @@
 		</activity>
 		<activity android:label="@string/coordinates" android:name="SearchCoordinates">
 		</activity>
+		<activity android:label="@string/address" android:name="SearchAddress">
+		</activity>
 	</application>
 </manifest>
