Added About SBA page for help.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,5 +23,7 @@
 		</activity>
 		<activity android:label="@string/address" android:name="SearchAddress">
 		</activity>
+		<activity android:label="@string/about_sba_communications" android:name="AboutSbaCommunications">
+		</activity>
 	</application>
 </manifest>
