--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.sbasite.sbasites" android:versionName="@string/app_version" android:versionCode="1">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<application android:name=".SBASitesApplication" android:label="@string/app_name" android:icon="@drawable/cw">
-		<uses-library android:required="true" android:name="com.google.android.maps"></uses-library><activity android:label="@string/app_name" android:name=".SBAMapActivity">
-			<uses-library android:name="com.google.android.maps" /><intent-filter>
+	<application android:name=".SBASitesApplication" android:label="@string/app_name" android:icon="@drawable/cw" android:theme="@android:style/Theme.Light">
+		<uses-library android:required="true" android:name="com.google.android.maps"></uses-library>
+		<activity android:label="@string/app_name" android:name=".SBAMapActivity">
+			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
@@ -13,7 +14,7 @@
 		</activity>
 		<activity android:label="@string/layers" android:name="Layers">
 		</activity>
-		<activity android:label="@string/list_view" android:name="ListView">
+		<activity android:label="@string/list_view" android:name="SiteListActivity">
 		</activity>
 		<activity android:label="@string/site_detail_activity" android:name="SiteDetailActivity">
 		</activity>
