--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-sdk android:targetSdkVersion="9" android:minSdkVersion="7"></uses-sdk>
-	<application android:name=".SBASitesApplication" android:label="@string/app_name" android:icon="@drawable/cw" android:theme="@android:style/Theme.Light">
+	<application android:name=".SBASitesApplication" android:label="@string/app_name" android:theme="@android:style/Theme.Light" android:icon="@drawable/icon">
 		<meta-data android:name="AA_DB_NAME" android:value="Application.db" />
 		<meta-data android:name="AA_DB_VERSION" android:value="1" />
 		<uses-library android:required="true" android:name="com.google.android.maps"></uses-library>
@@ -19,7 +19,7 @@
 		</activity>
 		<activity android:label="@string/list_view" android:name="SiteListActivity">
 		</activity>
-		<activity android:label="@string/site_detail_activity" android:name="SiteDetailActivity">
+		<activity android:label="@string/site_detail_activity" android:name=".SiteDetailActivity">
 		</activity>
 		<activity android:label="@string/site_name_id" android:name="SearchSiteNameAddress">
 		</activity>
@@ -29,5 +29,6 @@
 		</activity>
 		<activity android:label="@string/about_sba_communications" android:name="AboutSbaCommunications">
 		</activity>
+		<activity android:label="Search" android:name=".SearchListActivity"></activity>
 	</application>
 </manifest>
