Site details are loading, Site Image is loading
Signed-off-by: Ross Chapman <ross.chapman@me.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,5 +30,6 @@
 		<activity android:label="@string/about_sba_communications" android:name="AboutSbaCommunications">
 		</activity>
 		<activity android:label="Search" android:name=".SearchListActivity"></activity>
+		<activity android:name=".Activity.SiteImageViewActivity" android:label="Site Image"></activity>
 	</application>
 </manifest>
