--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="lib/activeandroid.jar"/>
+	<classpathentry kind="src" path="android-mapviewballoons_src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
