--- a/default.properties
+++ b/default.properties
@@ -10,3 +10,4 @@
 # Project target.
 target=Google Inc.:Google APIs:7
 sdk-folder=/Developer/android-sdk-mac_86
+android.library.reference.1=../android-mapviewballoons
