--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.sbasite.sbasites" android:versionName="@string/app_version" android:versionCode="1">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<uses-sdk android:targetSdkVersion="9" android:minSdkVersion="7"></uses-sdk>
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="11"></uses-sdk>
 	<application android:name="SBASitesApplication" android:label="@string/app_name" android:icon="@drawable/icon" android:theme="@style/Theme.OTweet">
 		<meta-data android:name="AA_DB_NAME" android:value="Application.db" />
 		<meta-data android:name="AA_DB_VERSION" android:value="1" />
