Trying to get rid of eclipse errors with map balloon library

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,11 @@ xcuserdata
 # svn & cvs
 .svn
 CVS
-.classpath
 
-/bin/SBASites-Android.apk
-/bin/resources.ap_
+# eclipse noise
+*.apk
+*.ap_
+*.dex
+*.class
+*.classpath
+*.project
