--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"></uses-sdk>
 	
 	<application android:name=".SBASitesApplication"
-		android:label="@string/app_name" android:icon="@drawable/icon" android:debuggable="true">
+		android:label="@string/app_name" android:icon="@drawable/icon" android:debuggable="true" android:theme="@style/Theme.OTweet">
 		<meta-data android:name="AA_DB_NAME" android:value="Application.db" />
 		<meta-data android:name="AA_DB_VERSION" android:value="1" />
 		<uses-library android:required="true" android:name="com.google.android.maps"></uses-library>
