Not showing map for some reason

--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="lib/activeandroid.jar"/>
 	<classpathentry kind="src" path="android-mapviewballoons_src"/>
+	<classpathentry kind="lib" path="lib/android-actionbarsherlock-2.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
