--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.sbasite.sbasites" android:versionName="@string/app_version" android:versionCode="4">
+	package="com.sbasite.sbasites" android:versionName="@string/app_version" android:versionCode="5">
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -49,5 +49,6 @@
                    android:value=".SearchListActivity" />
 		</activity>
 		<activity android:label="Site Image" android:name=".activity.SiteImageViewActivity" android:screenOrientation="portrait"></activity>
+		<service android:name=".service.SBASyncService"></service>
 	</application>
 </manifest>
