--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.sbasite.sbasites" android:versionName="@string/app_version" android:versionCode="6">
+	package="com.sbasite.sbasites" android:versionName="@string/app_version" android:versionCode="11">
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"></uses-sdk>
 	
-	<application android:name=".SBASitesApplication"
-		android:label="@string/app_name" android:icon="@drawable/icon" android:theme="@style/Theme.GDCatalog">
+	<application android:icon="@drawable/icon" android:theme="@style/Theme.GDCatalog" android:name=".SBASitesApplication" android:label="@string/app_name">
 		<meta-data android:name="AA_DB_NAME" android:value="Application.db" />
 		<meta-data android:name="AA_DB_VERSION" android:value="1" />
 		<uses-library android:required="true" android:name="com.google.android.maps"></uses-library>
-		<activity android:label="@string/app_name" android:screenOrientation="portrait" android:launchMode="singleTask" android:name=".activity.SBAMapActivity">
+		<activity android:label="@string/app_name" android:screenOrientation="portrait" android:name=".activity.SBAMapActivity" android:launchMode="singleTask">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
