--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="lib/activeandroid.jar"/>
 	<classpathentry kind="lib" path="lib/overlaymanager-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/libGoogleAnalytics.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
